Fixes overflow focus

--- a/src/components/controls/Selectable/examples.scss
+++ b/src/components/controls/Selectable/examples.scss
@@ -57,6 +57,7 @@
   .selectable-dropdown__overflow {
     max-height: 112px;
     overflow-y: auto;
+    position: relative;
   }
 
   .current-value {
